fix(privacy-policy + case-studies): adjust z-index in case-studies. add padding and force linebreak in privacy-policy

--- a/src/css/pages/case-studies.scss
+++ b/src/css/pages/case-studies.scss
@@ -6,6 +6,7 @@
 
 .hero {
   position: relative;
+  z-index: 1;
 
   &:before {
     position: absolute;
@@ -29,6 +30,10 @@
     );
   }
 
+  &:after {
+    height: rem(40);
+  }
+
   &__content {
     position: relative;
     margin-top: rem(88);
@@ -45,8 +50,15 @@
 }
 
 .content {
-  min-height: rem(640);
-  margin-top: rem(24);
+  position: relative;
+  z-index: 1;
+  min-height: rem(700);
+
+  // background: linear-gradient(
+  //   180deg,
+  //   transparentize($tuf-color-primary ,0) 20%,
+  //   transparentize($tuf-color-primary-dark, 0) 90%
+  // );
 
   &__filter {
     display: flex;
@@ -57,7 +69,7 @@
 
     justify-content: center;
 
-    margin-bottom: rem(24);
+    margin-bottom: rem(48);
 
     &-wrapper {
       position: relative;
@@ -79,7 +91,7 @@
     }
 
     &__label {
-      color: transparentize($tuf-color-primary, .5);
+      color: $tuf-color-dropdown-label;
     }
 
     &__btn {
